ema using talib, fixed

--- a/notebooks/analisis-tecnico/0.1-ema-sma.ipynb
+++ b/notebooks/analisis-tecnico/0.1-ema-sma.ipynb
@@ -25,7 +25,7 @@
     "* $n$ es el número total de periodos que estás considerando.\n",
     "\n",
     "\n",
-    "> **Disclaimer: Este material no constituye un consejo de inversión. Es únicamente para fines educativos.**\n",
+    "<span style=\"color:white; background-color:red; padding:2px;\"><strong>Disclaimer:</strong> Este material no constituye un consejo de inversión. Es únicamente para fines educativos.</span>\n",
     "\n",
     "\n",
     "\n",
@@ -1163,16 +1163,12 @@
     "\n",
     "La SMA (Media Móvil Simple) y la EMA (Media Móvil Exponencial) son dos indicadores comunes utilizados en el trading. Entre las diversas estrategias, una de las más populares es el uso de la SMA_50 y la SMA_200. Sin embargo, es importante señalar que depender únicamente de estos indicadores no garantiza obtener grandes rendimientos. Es recomendable combinarlos con otros indicadores para realizar un análisis más completo.\n",
     "\n",
-    "*> Disclaimer: Este material no constituye un consejo de inversión. Es únicamente para fines educativos.*\n",
+    "<span style=\"color:white; background-color:red; padding:2px;\"><strong>Disclaimer:</strong> Este material no constituye un consejo de inversión. Es únicamente para fines educativos.</span>\n",
+    "\n",
     "\n",
     "\n",
     "Por otro lado, la forma más sencilla de calcular las SMAs es utilizando la biblioteca TA-Lib. No obstante, para practicar y reforzar la comprensión, es beneficioso implementar estos cálculos usando Python puro con `pandas` y `numpy`."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
