--- a/notebooks/analisis-tecnico/0.1-ema-sma.ipynb
+++ b/notebooks/analisis-tecnico/0.1-ema-sma.ipynb
@@ -25,7 +25,8 @@
     "* $n$ es el número total de periodos que estás considerando.\n",
     "\n",
     "\n",
-    "<span style=\"color:white; background-color:red; padding:2px;\"><strong>Disclaimer:</strong> Este material no constituye un consejo de inversión. Es únicamente para fines educativos.</span>\n",
+    "<span style=\"color:black; background-color:yellow; padding:2px;\"><strong>Disclaimer:</strong> Este material no constituye un consejo de inversión. Es únicamente para fines educativos.</span>\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -1163,7 +1164,8 @@
     "\n",
     "La SMA (Media Móvil Simple) y la EMA (Media Móvil Exponencial) son dos indicadores comunes utilizados en el trading. Entre las diversas estrategias, una de las más populares es el uso de la SMA_50 y la SMA_200. Sin embargo, es importante señalar que depender únicamente de estos indicadores no garantiza obtener grandes rendimientos. Es recomendable combinarlos con otros indicadores para realizar un análisis más completo.\n",
     "\n",
-    "<span style=\"color:white; background-color:red; padding:2px;\"><strong>Disclaimer:</strong> Este material no constituye un consejo de inversión. Es únicamente para fines educativos.</span>\n",
+    "<span style=\"color:black; background-color:yellow; padding:2px;\"><strong>Disclaimer:</strong> Este material no constituye un consejo de inversión. Es únicamente para fines educativos.</span>\n",
+    "\n",
     "\n",
     "\n",
     "\n",
